--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <!-- TERA-BITE -->
       <a href="Tera-Bite_3lb_Battlebot.html" class="project-card project-link">
-        <img src="tera-bite.png" alt="Tera-Bite Battle Bot" class="project-img">
+        <img src="Tera-Bite.png" alt="Tera-Bite Battle Bot" class="project-img">
 
         <div class="project-overlay">
           <p>
