--- a/Tera-Bite_3lb_Battlebot.html
+++ b/Tera-Bite_3lb_Battlebot.html
@@ -199,24 +199,34 @@
       </div>
     </div>
 
-    <div class="step">
-     <iframe
-  src="file:///C:/Users/shaha/Downloads/Portfolio/Portfolio/Motor%20Mount%20Drawing.PDF"
-  width="100%"
-  height="600"
-  class="fade-in-left"
-  style="border:none;">
-</iframe>
+   <div class="step">
 
-      <div class="step-content fade-in-right">
-        <div class="step-title">Motor Mount</div>
-        <div class="accent-line"></div>
-        <p>This motor mount was a good opportunity for me to brush up on my GD&T skills and my machining skills. 
-          I made this drawing for the motor mount on solidworks and added GD&T callouts where necessary. I machined this 
-          part on the manual mill. I used a 3D printed jig to prop the mount to create the slant in the part. 
-        </p>
-      </div>
-    </div>
+ <div class="step">
+
+  <div class="resume-viewer fade-in-left">
+    <img
+      src="Motor Mount Drawing.png"
+      alt="Motor Mount Drawing"
+      class="resume-img"
+    >
+  </div>
+
+  <div class="step-content fade-in-right">
+    <div class="step-title">Motor Mount</div>
+    <div class="accent-line"></div>
+    <p>
+      This motor mount was a good opportunity for me to brush up on my GD&T skills and my machining skills.
+      I made this drawing for the motor mount in SolidWorks and added GD&T callouts where necessary.
+      I machined this part on the manual mill and used a 3D printed jig to prop the mount to create the slant in the part.
+    </p>
+  </div>
+
+</div>
+
+
+
+</div>
+
 
     <div class="step">
       <img src="Torque Transfer 1.png" alt="Motor mount" class="fade-in-right">
